new design for staging/marvelad.css
/* ... */
.section-title-desktop {
    font-weight: 600;
    font-size: 17px;
    color: #004b8c;
    position: relative;
    margin-bottom: 1rem;
}

.section-title-desktop::before {
    padding-top: 5px;
    content: "";
    position: absolute;
    top: 18px;
    left: 2px;
    width: 32px;
    border-bottom: 3px solid gray;
}

.ad-block-top-desktop {
    display: none;
    width: 100%;
    height: 100px;
    background-color: gray;
    margin-top: 15px;
    margin-bottom: 15px;
    margin-right: auto;
    margin-left: auto;
}

.ad-block-mobile {
    display: block;
    width: 320px;
    height: 100px;
    background-color: gray;
    /*margin-top: 15px;
    margin-bottom: 15px;*/
    margin-right: auto;
    margin-left: auto;
}

.transparent-hamburger {
    position: absolute;
    width: 100vw;
    top: 60px;
    bottom: 0;
    left: 0;
    transform: translateX(-100%);
    transition: all ease .25s;
    background-color: #00000000;
    z-index: 21;
}

.mobile-side-nav {
    width: 20vw;
    height: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    color: white;
    background-color: #004B8C;
    z-index: 4;
}

.transparent-hamburger.open {
    width: 100%;
    transform: translateX(0%);
    height: 100%;
}

.close-side-nav {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    height: 10%;
}

.hamburger-logo {
    margin-right: 20px;
    width: 50vw;
    height: 5vh;
    background-image: url(https://stagingesakal.sakalmediagroup.com/sites/esakal/themes/smg980/logo.png);
    background-repeat: no-repeat;
    background-size: contain;
}

.side-nav-item {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.side-nav-content {
    width: 90%;
    display: flex;
    align-items: center;
    font-weight: 700;
    font-size: 14px;
    border-left: 1px solid #d9d9d9;
    border-right: 1px solid #d9d9d9;
    border-top: 1px solid #d9d9d9;
    padding: 15px;
}

.side-nav-content:last-child {
    border-bottom: 1px solid #d9d9d9;
}

.x-style {
    font-size: 18px;
    font-weight: 600;
    margin-bottom: 5px;
}

.mobile-global-nav {
    display: none !important;
}

.mobile-nav-wrapper {
    display: none !important;
    width: 100%;
    height: 6.5vh;
    font-size: 16px;
    background-color: #004B8C;
    box-shadow: inset 0px 2px 3px 0px #061014;
    color: white;
    position: sticky;
    top: 60px;
    z-index: 20;
}

.mobile-nav-link {
    text-shadow: 0.5px 0.5px;
    padding: 0px 5px;
    position: relative;
}

.mobile-nav-link::after {
    content: "";
    top: 1px;
    height: 21px;
    width: 1px;
    right: -5px;
    position: absolute;
    border-right: 1px solid #061014;
}

.mobile-nav-link:last-child::after {
    border-right: none;
}

#desktop-side-menu-btn span {
    margin-right: 0.3em;
}

.carousel-indicators.c-indicator {
    bottom: 10px !important;
}

.row.adjust-categories{
    margin: 0px !important;
}

.sticky {
    position: fixed;
    top: 0;
    z-index: 21;
}

.transparent-hamburger.open.sticky{
    top: 60px;
}

/* ============================================================================= */


/* --------- start Nitesh ---------- */

.section-title {
    font-size: 22px;
    font-weight: 600;
    line-height: 1.4;
    color: #004B8C;
    width: fit-content;
}

.section-title:after {
    border-bottom: 3px solid #3F3D3D;
    content: '';
    display: block;
    width: 40%;
}

.news-section-title {
    width: min-content;
    font-size: 12px;
    font-weight: bold;
    line-height: 1.1;
    color: rgb(0, 75, 160);
}

.news-section-title:after {
    /* border-bottom: 2px solid #3F3D3D; */
    content: '';
    display: block;
    width: 75%;
}

.news-footer {
    font-size: 12px;
    line-height: 1.2;
    color: #7b7a7a;
}

.global-nav-wrapper {
    height: 40px;
    font-size: 16px;
    font-weight: 600;
    width: 1040px;
    background-color: #004B8C;
    color: white;
    display: flex;
    /* flex-direction: column; */
    align-items: center;
}

.global-nav {
    width: 91.5%;
    display: flex;
    align-items: center;
}

.global-nav-right-div {
    width: 8.5%;
}

.global-nav-space{
    padding-left: 2.5%;
    padding-right: 2.5%;
}

.main-wrapper {
    width: 1040px;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.header {
    width: 93%;
}

.header-logo {
    background-image: url("https://sankey-bucket.s3-ap-southeast-1.amazonaws.com/Sakal.jpg");
    background-repeat: no-repeat;
    background-position: center;
    width: 100%;
    height: 120px;
    border-bottom: #B5B5B5 solid 1.3px;
    font-size: 12px;
    background-size: 300px 175px;
}

.category-title {
    color: black;
    font-size: 15px;
    font-weight: 600;
}

.news-content-div {
    border-bottom: #d9d9d9 solid 1px;
}

.news-content-div:last-child {
    border-bottom: none;
    padding-bottom: 0px !important;
}

.left-box {
    width: calc(100% - 335px);
    margin-right: 15px !important;
}

.right-box {
    width: 320px;
}

.breaking-news .left-box .left-box-top {
    height: 450px;
    background-image: url(https://lh4.googleusercontent.com/proxy/XPBCY_PH_YeH1erNtUOPuRfAdGgrZyLox7BxPPsraczdaFMdTXts_f_T-X100BUvKtyceQimcxMM-MtbX9SEXghUMBcKRZQ41N_cZulmFcrmfxE6tssQODu2xg4t);
    background-repeat: no-repeat;
    background-position: top;
    background-size: 100% 80%;
    border-bottom: #d9d9d9 solid 1px;
}

.breaking-news .left-box .left-box-top .row .n1 .news-title {
    font-size: 18px;
    line-height: 1.4;
    max-height: 50px;
}

.breaking-news .left-box .left-box-top .row .col-lg-4 .news-description {
    -webkit-line-clamp: 3;
    font-size: 14px;
    max-height: 55px;
}

.breaking-news .left-box .left-box-top .row .n2 .news-title {
    font-size: 14px;
}

.breaking-news .left-box .left-box-top .row .col-lg-4 .news-description {
    -webkit-line-clamp: 3;
    font-size: 12px;
    max-height: 45px;
}
/* ... */

